--- a/kanpe.html
+++ b/kanpe.html
@@ -81,116 +81,106 @@
   </div>
   <div class="pack">
     <div class="row">
-    	<div class="cards">
-    		<div class="card twelve cols" href="#">
-  				<span class="card-title accent-orange">
-  					<h3>This is a title for a card.</h3>
-  				</span>
-    			<span class="card-summary">
-    				A summary will also be present. Usually two to three brief sentences about the content on the detail page. A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-    			</span>
-    			<div class="card-meta">
-            <button style="width: 100%; background-color: #333;" class=""></button>
-    			</div>
-  		  </div>
+      <div class="three cols card card-red"><!-- card -->
+        <div class="head">
+          <i class="icon ion-close-circled"></i>&nbsp;これはヘッダーです。
+        </div>
+        <div class="body">
+          これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。
+        </div>
+        <div class="foot">
+          <a href="#" class="tx-center one-half card-btn">
+            <i class="icon ion-compose"></i>&nbsp;Edit
+          </a>
+          <a href="#" class="tx-center one-half card-btn danger">
+            <i class="icon ion-trash-a"></i>&nbsp;Delete
+          </a>
+        </div>
       </div>
-    	<div class="cards">
-    		<div class="card info three cols" href="#">
-  				<span class="card-title">
-  					<h3><i class="icon ion-information-circled"></i> Information</h3>
-  				</span>
-    			<span class="card-summary">
-    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-    			</span>
-    			<div class="card-meta">
-    				<span class="left">Published: June 18th, 2015</span>
-      			<span class="right">Read more</span>
-    			</div>
-  		  </div>
-    		<div class="card succ three cols" href="#">
-  				<span class="card-title">
-  					<h3><i class="icon ion-checkmark-circled"></i> Success!</h3>
-  				</span>
-    			<span class="card-summary">
-    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-    			</span>
-    			<div class="card-meta">
-    				<span class="left">Published: June 18th, 2015</span>
-      			<span class="right">Read more</span>
-    			</div>
-    		</div>
-    		<div class="card warn three cols" href="#">
-  				<span class="card-title">
-  					<h3><i class="icon ion-alert-circled"></i> Warning!</h3>
-  				</span>
-    			<span class="card-summary">
-    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-    			</span>
-    			<div class="card-meta">
-    				<span class="left">Published: June 18th, 2015</span>
-      			<span class="right">Read more</span>
-    			</div>
-  		  </div>
-    		<div class="card dang three cols" href="#">
-  				<span class="card-title">
-  					<h3><i class="icon ion-close-circled"></i> Error.</h3>
-  				</span>
-    			<span class="card-summary">
-    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-    			</span>
-    			<div class="card-meta">
-    				<span class="left">Published: June 18th, 2015</span>
-      			<span class="right">Read more</span>
-    			</div>
-    		</div>
+      <div class="three cols card card-yellow"><!-- card -->
+        <div class="head">
+          <i class="icon ion-alert-circled"></i>&nbsp;これはヘッダーです。
+        </div>
+        <div class="body">
+          こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。
+        </div>
+        <div class="foot">
+          <a href="#" class="tx-center one-half card-btn">
+            <i class="icon ion-compose"></i>&nbsp;Edit
+          </a>
+          <a href="#" class="tx-center one-half card-btn danger">
+            <i class="icon ion-trash-a"></i>&nbsp;Delete
+          </a>
+        </div>
       </div>
-      <div class="cards">
-    		<div class="card four cols" href="#">
-    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/200/animals);">
-    				<span class="card-title">
-              <h3>This is a title for a card.This is a title for a card.This is a title for a card</h3>
-    				</span>
-    			</span>
-    			<span class="card-summary">
-    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-    			</span>
-    			<div class="card-meta">
-    				<span class="left">Published: June 18th, 2015</span>
-      			<span class="right">Read more</span>
-    			</div>
-    		</div>
-    		<div class="card four cols" href="#">
-    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/400/people)">
-    				<span class="card-title">
-    					<h3>This is a title for a card</h3>
-    				</span>
-    			</span>
-    			<span class="card-summary">
-    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
-    			</span>
-    			<div class="card-meta">
-    				<span class="left">Published: June 18th, 2015</span>
-      			<span class="right">Read more</span>
-    			</div>
-    		</div>
-    		<div class="card four cols" href="#">
-    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/nature);">
-    				<span class="card-title">
-    					<h3>This is a title for a card</h3>
-    				</span>
-    			</span>
-    			<span class="card-summary">
-    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
-    			</span>
-    			<div class="card-meta">
-    				<span class="left">Published: June 18th, 2015</span>
-      			<span class="right">Read more</span>
-    			</div>
-    		</div>
-    	</div>
+      <div class="three cols card card-green"><!-- card -->
+        <div class="head">
+          <i class="icon ion-checkmark-circled"></i>&nbsp;これはヘッダーです。
+        </div>
+        <div class="body">
+          こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。
+        </div>
+        <div class="foot">
+          <a href="#" class="tx-center one-half card-btn">
+            <i class="icon ion-compose"></i>&nbsp;Edit
+          </a>
+          <a href="#" class="tx-center one-half card-btn danger">
+            <i class="icon ion-trash-a"></i>&nbsp;Delete
+          </a>
+        </div>
+      </div>
+      <div class="three cols card card-blue"><!-- card -->
+        <div class="head">
+          <i class="icon ion-android-alert"></i>&nbsp;これはヘッダーです。
+        </div>
+        <div class="body">
+          こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。
+        </div>
+        <div class="foot">
+          <a href="#" class="tx-center one-half card-btn">
+            <i class="icon ion-compose"></i>&nbsp;Edit
+          </a>
+          <a href="#" class="tx-center one-half card-btn danger">
+            <i class="icon ion-trash-a"></i>&nbsp;Delete
+          </a>
+        </div>
+      </div>
     </div>
-  </div>
-
+    <div class="pack">
+      <div class="row">
+        <div class="six cols card"><!-- card -->
+          <div class="image-head" style="background-image: url(http://placeimg.com/400/200/animals);">
+            <div class="title">
+              This is title.
+            </div>
+          </div>
+          <div class="foot">
+            <a href="#" class="tx-center one-half card-btn">
+              <i class="icon ion-compose"></i>&nbsp;Edit
+            </a>
+            <a href="#" class="tx-center one-half card-btn danger">
+              <i class="icon ion-trash-a"></i>&nbsp;Delete
+            </a>
+          </div>
+        </div>
+        <div class="six cols card card-blue"><!-- card -->
+          <div class="head">
+            <i class="icon ion-android-alert"></i>&nbsp;これはヘッダーです。
+          </div>
+          <div class="body">
+            こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。
+          </div>
+          <div class="foot">
+            <a href="#" class="tx-center one-half card-btn">
+              <i class="icon ion-compose"></i>&nbsp;Edit
+            </a>
+            <a href="#" class="tx-center one-half card-btn danger">
+              <i class="icon ion-trash-a"></i>&nbsp;Delete
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   <div class="pack">
     <div class="row">
       <h4>Aligner</h4>
