--- a/kanpe.html
+++ b/kanpe.html
@@ -145,8 +145,6 @@
           </a>
         </div>
       </div>
-    </div>
-    <div class="pack">
       <div class="row">
         <div class="six cols card"><!-- card -->
           <div class="image-head" style="background-image: url(http://placeimg.com/400/200/animals);">
@@ -177,6 +175,50 @@
             <a href="#" class="tx-center one-half card-btn danger">
               <i class="icon ion-trash-a"></i>&nbsp;Delete
             </a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="twelve cols card"><!-- card -->
+          <div class="head">
+            <div class="title">
+              Input & Forms
+            </div>
+            <a class="circle-button">
+              <i class="icon ion-code-working"></i>
+            </a>
+          </div>
+          <div class="body">
+            <form class="qwertize">
+              <div class="row">
+                <div class="six cols">
+                  <label for="exampleEmailInput">Your email</label>
+                  <input class="qw-fullwidth" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
+                </div>
+                <div class="six cols">
+                  <label for="exampleRecipientInput">Reason for contacting</label>
+                  <select class="qw-fullwidth" id="exampleRecipientInput">
+                    <option value="Option 1">Questions</option>
+                    <option value="Option 2">Admiration</option>
+                    <option value="Option 3">Can I get your number?</option>
+                  </select>
+                </div>
+              </div>
+              <label for="exampleMessage">Message</label>
+              <textarea class="qw-fullwidth" placeholder="Hi Dave …" id="exampleMessage"></textarea>
+              <div class="row">
+                  <div>
+                    <h6>Choose one.</h6>
+                    <input type="radio" name="sample-radio" checked="checked" id="radio-1" /><label for="radio-1">Windows</label>
+                    <input type="radio" name="sample-radio" id="radio-2" /><label for="radio-2">Mac</label>
+                    <input type="radio" name="sample-radio" id="radio-3" /><label for="radio-3">Linux</label>
+                  </div>
+                  <div>
+                      <input type="checkbox" name="sample-checkbox" checked="checked" id="checkbox" /><label for="checkbox">Do you agree to the <a href="#">Terms of Use?</a></label>
+                  </div>
+              </div>
+              <input class="btn-dark" type="submit" value="Submit">
+            </form>
           </div>
         </div>
       </div>
@@ -289,37 +331,7 @@
       <button class="btn btn-dark btn-xl">btn-xl</button>
     </div>
 
-    <form>
-      <div class="row">
-        <div class="six cols">
-          <label for="exampleEmailInput">Your email</label>
-          <input class="u-full-width" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
-        </div>
-        <div class="six cols">
-          <label for="exampleRecipientInput">Reason for contacting</label>
-          <select class="u-full-width" id="exampleRecipientInput">
-            <option value="Option 1">Questions</option>
-            <option value="Option 2">Admiration</option>
-            <option value="Option 3">Can I get your number?</option>
-          </select>
-        </div>
-      </div>
-      <label for="exampleMessage">Message</label>
-      <textarea class="u-full-width" placeholder="Hi Dave …" id="exampleMessage"></textarea>
-      <div class="q-formbox">
-          <div>
-            <h6>Choose one.</h6>
-            <input type="radio" name="sample-radio" checked="checked" id="radio-1" /><label for="radio-1">Windows</label>
-            <input type="radio" name="sample-radio" id="radio-2" /><label for="radio-2">Mac</label>
-            <input type="radio" name="sample-radio" id="radio-3" /><label for="radio-3">Linux</label>
-          </div>
-          <div>
-              <input type="checkbox" name="sample-checkbox" checked="checked" id="checkbox" /><label for="checkbox">Do you agree to the <a href="#">Terms of Use?</a></label>
-          </div>
-      </div>
-      <input class="btn-dark" type="submit" value="Submit">
-    </form>
-    <table class="u-full-width">
+    <table class="qw-fullwidth">
       <thead>
         <tr>
           <th>Name</th>
