--- a/kanpe.html
+++ b/kanpe.html
@@ -145,84 +145,105 @@
           </a>
         </div>
       </div>
-      <div class="row">
-        <div class="six cols card"><!-- card -->
-          <div class="image-head" style="background-image: url(http://placeimg.com/400/200/animals);">
-            <div class="title">
-              This is title.
-            </div>
+    </div>
+    <div class="row">
+      <div class="seven cols card"><!-- card -->
+        Hello1
+      </div>
+        <div class="one cols card"><!-- card -->
+          Hello3
+        </div>
+          <div class="one cols card"><!-- card -->
+            Hello3
           </div>
-          <div class="foot">
-            <a href="#" class="tx-center one-half card-btn">
-              <i class="icon ion-compose"></i>&nbsp;Edit
-            </a>
-            <a href="#" class="tx-center one-half card-btn danger">
-              <i class="icon ion-trash-a"></i>&nbsp;Delete
-            </a>
+            <div class="one cols card"><!-- card -->
+              Hello3
+            </div>
+              <div class="one cols card"><!-- card -->
+                Hello3
+              </div>
+                <div class="one cols card"><!-- card -->
+                  Hello3
+                </div>
+    </div>
+    <div class="row">
+      <div class="six cols card"><!-- card -->
+        <div class="image-head" style="background-image: url(http://placeimg.com/400/200/animals);">
+          <div class="title">
+            This is title.
           </div>
         </div>
-        <div class="six cols card card-blue"><!-- card -->
-          <div class="head">
-            <i class="icon ion-android-alert"></i>&nbsp;これはヘッダーです。
-          </div>
-          <div class="body">
-            こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。
-          </div>
-          <div class="foot">
-            <a href="#" class="tx-center one-half card-btn">
-              <i class="icon ion-compose"></i>&nbsp;Edit
-            </a>
-            <a href="#" class="tx-center one-half card-btn danger">
-              <i class="icon ion-trash-a"></i>&nbsp;Delete
-            </a>
-          </div>
+        <div class="foot">
+          <a href="#" class="tx-center one-half card-btn">
+            <i class="icon ion-compose"></i>&nbsp;Edit
+          </a>
+          <a href="#" class="tx-center one-half card-btn danger">
+            <i class="icon ion-trash-a"></i>&nbsp;Delete
+          </a>
         </div>
       </div>
-      <div class="row">
-        <div class="twelve cols card"><!-- card -->
-          <div class="head">
-            <div class="title">
-              Input & Forms
-            </div>
-            <a class="circle-button">
-              <i class="icon ion-code-working"></i>
-            </a>
-          </div>
-          <div class="body">
-            <form class="qwertize">
-              <div class="row">
-                <div class="six cols">
-                  <label for="exampleEmailInput">Your email</label>
-                  <input class="qw-fullwidth" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
-                </div>
-                <div class="six cols">
-                  <label for="exampleRecipientInput">Reason for contacting</label>
-                  <select class="qw-fullwidth" id="exampleRecipientInput">
-                    <option value="Option 1">Questions</option>
-                    <option value="Option 2">Admiration</option>
-                    <option value="Option 3">Can I get your number?</option>
-                  </select>
-                </div>
-              </div>
-              <label for="exampleMessage">Message</label>
-              <textarea class="qw-fullwidth" placeholder="Hi Dave …" id="exampleMessage"></textarea>
-              <div class="row">
-                  <div>
-                    <h6>Choose one.</h6>
-                    <input type="radio" name="sample-radio" checked="checked" id="radio-1" /><label for="radio-1">Windows</label>
-                    <input type="radio" name="sample-radio" id="radio-2" /><label for="radio-2">Mac</label>
-                    <input type="radio" name="sample-radio" id="radio-3" /><label for="radio-3">Linux</label>
-                  </div>
-                  <div>
-                      <input type="checkbox" name="sample-checkbox" checked="checked" id="checkbox" /><label for="checkbox">Do you agree to the <a href="#">Terms of Use?</a></label>
-                  </div>
-              </div>
-              <input class="btn-dark" type="submit" value="Submit">
-            </form>
-          </div>
+      <div class="six cols card card-blue"><!-- card -->
+        <div class="head">
+          <i class="icon ion-android-alert"></i>&nbsp;これはヘッダーです。
+        </div>
+        <div class="body">
+          こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。
+        </div>
+        <div class="foot">
+          <a href="#" class="tx-center one-half card-btn">
+            <i class="icon ion-compose"></i>&nbsp;Edit
+          </a>
+          <a href="#" class="tx-center one-half card-btn danger">
+            <i class="icon ion-trash-a"></i>&nbsp;Delete
+          </a>
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="twelve cols card"><!-- card -->
+        <div class="head">
+          <div class="title">
+            Input & Forms
+          </div>
+          <a class="circle-button">
+            <i class="icon ion-code-working"></i>
+          </a>
+        </div>
+        <div class="body">
+          <form class="qwertize">
+            <div class="row">
+              <div class="six cols">
+                <label for="exampleEmailInput">Your email</label>
+                <input class="qw-fullwidth" type="email" placeholder="test@mailbox.com" id="exampleEmailInput">
+              </div>
+              <div class="six cols">
+                <label for="exampleRecipientInput">Reason for contacting</label>
+                <select class="qw-fullwidth" id="exampleRecipientInput">
+                  <option value="Option 1">Questions</option>
+                  <option value="Option 2">Admiration</option>
+                  <option value="Option 3">Can I get your number?</option>
+                </select>
+              </div>
+            </div>
+            <label for="exampleMessage">Message</label>
+            <textarea class="qw-fullwidth" placeholder="Hi Dave …" id="exampleMessage"></textarea>
+            <div class="row">
+                <div>
+                  <h6>Choose one.</h6>
+                  <input type="radio" name="sample-radio" checked="checked" id="radio-1" /><label for="radio-1">Windows</label>
+                  <input type="radio" name="sample-radio" id="radio-2" /><label for="radio-2">Mac</label>
+                  <input type="radio" name="sample-radio" id="radio-3" /><label for="radio-3">Linux</label>
+                </div>
+                <div>
+                    <input type="checkbox" name="sample-checkbox" checked="checked" id="checkbox" /><label for="checkbox">Do you agree to the <a href="#">Terms of Use?</a></label>
+                </div>
+            </div>
+            <input class="btn-dark" type="submit" value="Submit">
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="pack">
     <div class="row">
       <h4>Aligner</h4>
