--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
   <link href='https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700' rel='stylesheet' type='text/css'>
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/qwerty.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/site.css">
-  <link rel="stylesheet" href="css/pushy.css">
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -70,9 +67,9 @@
 
 <!--****** MAIN CONTENT ************** -->
 
-<div class="wrapper">
+<div class="wrap">
 
-  <div class="container">
+  <div class="pack">
     <div class="row">
       <div class="tx-center">
         <img src="images/logo.png" width="180px" />
@@ -95,7 +92,7 @@ $(function() {
   $('.clean-search-show').click(function(e) {
     $('.clean-search').addClass('clean-search-active');
   });
-  $('.wrapper').click(function(e) {
+  $('.wrap').click(function(e) {
     $('.clean-search').removeClass('clean-search-active');
   });
   $('.pmenu-submenu').click(function(e) {
